Update weapons.html with real game content: add Great Axes, Enhancements & Runes, detailed Weapon Stats

--- a/weapons.html
+++ b/weapons.html
@@ -547,6 +547,111 @@
             </div>
         </div>
 
+        <!-- Upgrades Section -->
+        <div class="content-section">
+            <h2 style="color: #ff5722; margin-bottom: 1.5rem;">⬆️ Enhancements & Runes</h2>
+            
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(450px, 1fr)); gap: 2rem; margin-bottom: 2rem;">
+                <!-- Enhancer -->
+                <div style="background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%); border-radius: 12px; padding: 2rem; border-left: 4px solid #9c27b0;">
+                    <h3 style="color: #ce93d8; margin-bottom: 1rem; font-size: 1.3rem;">🔮 ENHANCER</h3>
+                    <p style="color: #b0bec5; margin-bottom: 1rem;">By talking to <strong style="color: #fff;">NPC Enhancer</strong>, you can spend <strong style="color: #ffd54f;">essences</strong> and <strong style="color: #ffd54f;">gold</strong> to upgrade your weapon.</p>
+                    <ul style="color: #b0bec5; margin-left: 1.5rem; line-height: 1.8;">
+                        <li>Upgrades improve all stats of the weapon.</li>
+                        <li>Certain upgrades can increase the number of rune slots.</li>
+                        <li>Each upgrade has a craft chance as you continue enhancing.</li>
+                    </ul>
+                </div>
+
+                <!-- Runemaker -->
+                <div style="background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%); border-radius: 12px; padding: 2rem; border-left: 4px solid #9c27b0;">
+                    <h3 style="color: #ce93d8; margin-bottom: 1rem; font-size: 1.3rem;">✨ RUNEMAKER</h3>
+                    <p style="color: #b0bec5; margin-bottom: 1rem;"><strong style="color: #fff;">NPC Runemaker</strong> allows you to socket <strong style="color: #ce93d8;">runes</strong> into weapons in exchange for <strong style="color: #ffd54f;">runes</strong> and <strong style="color: #ffd54f;">gold</strong>.</p>
+                    <ul style="color: #b0bec5; margin-left: 1.5rem; line-height: 1.8;">
+                        <li>Runes add buffs to help with farming, defending, and fighting.</li>
+                        <li>You can only apply runes if your weapon has available rune slots.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div style="background: linear-gradient(135deg, #2d1810 0%, #1a1a1a 100%); border-radius: 12px; padding: 1.5rem; text-align: center; border: 2px solid #9c27b0;">
+                <p style="color: #ce93d8; font-size: 1.1rem; margin: 0;">
+                    <strong>Upgrade Path:</strong> <span style="color: #fff;">FORGE WEAPON</span> → <span style="color: #fff;">ENHANCE STATS</span> → <span style="color: #fff;">SOCKET RUNES</span>
+                </p>
+            </div>
+        </div>
+
+        <!-- Weapon Stats Section -->
+        <div class="content-section">
+            <h2 style="color: #ff5722; margin-bottom: 1.5rem;">📊 Weapon Stats Explained</h2>
+            
+            <div style="display: grid; gap: 1.5rem;">
+                <!-- Damage -->
+                <div style="background: linear-gradient(135deg, #ffebee 0%, #ffcdd2 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #f44336;">
+                    <h3 style="color: #c62828; margin-bottom: 0.75rem; font-size: 1.2rem;">⚔️ DAMAGE</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Damage is the amount of health a weapon can take from an enemy per hit. The higher the damage, the more health is removed from an enemy.</p>
+                    <ul style="color: #555; margin-left: 1.5rem; line-height: 1.6;">
+                        <li>Damage can be increased by <strong>enhancements</strong> and applying <strong>runes</strong>.</li>
+                        <li>Heavy weapons like <strong>Great Swords</strong> and <strong>Colossal Axes</strong> start with higher base damage.</li>
+                    </ul>
+                </div>
+
+                <!-- Attack Speed -->
+                <div style="background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #2196f3;">
+                    <h3 style="color: #1565c0; margin-bottom: 0.75rem; font-size: 1.2rem;">⚡ ATTACK SPEED</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Attack Speed is how quickly a weapon can hit. Higher attack speed means you land more strikes in the same amount of time.</p>
+                    <ul style="color: #555; margin-left: 1.5rem; line-height: 1.6;">
+                        <li><strong>Daggers</strong> and <strong>katanas</strong> have high base attack speed.</li>
+                        <li><strong>Great Swords</strong> and other heavy weapons swing slower but hit harder.</li>
+                    </ul>
+                </div>
+
+                <!-- Quality -->
+                <div style="background: linear-gradient(135deg, #f3e5f5 0%, #e1bee7 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #9c27b0;">
+                    <h3 style="color: #6a1b9a; margin-bottom: 0.75rem; font-size: 1.2rem;">💎 QUALITY</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Quality is the overall rating of how strong a weapon is. Higher Quality tiers result in stronger weapons across all stats.</p>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Quality is determined by how well the player performs the <strong>forge minigames</strong>. Possible qualities include: <strong>Broken, Poor, Worn, Average, Good, Excellent, Perfect, Masterwork</strong> (lowest → highest).</p>
+                </div>
+
+                <!-- Attack Range -->
+                <div style="background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #4caf50;">
+                    <h3 style="color: #2e7d32; margin-bottom: 0.75rem; font-size: 1.2rem;">📏 ATTACK RANGE</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Attack Range is the distance from which a weapon can hit an enemy. Higher attack range lets you strike from farther away.</p>
+                    <ul style="color: #555; margin-left: 1.5rem; line-height: 1.6;">
+                        <li><strong>Daggers</strong> and <strong>katanas</strong> have shorter attack range.</li>
+                        <li><strong>Great Swords</strong> and <strong>Colossal Swords</strong> reach farther, hitting enemies at a safer distance.</li>
+                    </ul>
+                </div>
+
+                <!-- Weapon Type -->
+                <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #ff9800;">
+                    <h3 style="color: #e65100; margin-bottom: 0.75rem; font-size: 1.2rem;">🗡️ WEAPON TYPE</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Weapon Type is the family a weapon belongs to. Each type has its own base damage, speed, and range profile.</p>
+                    <p style="color: #555;">Types include <strong>Daggers, Straight Swords, Katanas, Great Swords, Great Axes, Colossal Swords</strong>, and <strong>Gauntlets</strong>, each supporting different playstyles.</p>
+                </div>
+
+                <!-- Chance -->
+                <div style="background: linear-gradient(135deg, #fce4ec 0%, #f8bbd0 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #e91e63;">
+                    <h3 style="color: #c2185b; margin-bottom: 0.75rem; font-size: 1.2rem;">🎲 CHANCE</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Chance is the rarity of a specific weapon within its weapon type. It describes how likely you are to forge that exact weapon.</p>
+                    <p style="color: #555;"><strong>Example:</strong> the <strong>Falchion Knife</strong> is a <strong>1/2 chance</strong> in the Dagger weapon type. That means you have a one-in-two chance to forge a Falchion Knife when forging Daggers.</p>
+                </div>
+
+                <!-- Price -->
+                <div style="background: linear-gradient(135deg, #fff9c4 0%, #fff59d 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #fbc02d;">
+                    <h3 style="color: #f57f17; margin-bottom: 0.75rem; font-size: 1.2rem;">💰 PRICE</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Price is the amount of <strong>gold</strong> you receive when selling a weapon. Each weapon type has its own base price.</p>
+                    <p style="color: #555;">High-quality and higher-tier weapons can be worth significantly more gold, especially when enhanced.</p>
+                </div>
+
+                <!-- Durability (Scrapped) -->
+                <div style="background: linear-gradient(135deg, #e0e0e0 0%, #bdbdbd 100%); border-radius: 12px; padding: 1.5rem; border-left: 4px solid #757575; opacity: 0.7;">
+                    <h3 style="color: #424242; margin-bottom: 0.75rem; font-size: 1.2rem;">🔧 DURABILITY (SCRAPPED)</h3>
+                    <p style="color: #555; margin-bottom: 0.75rem;">Weapons used to have a stat called <strong>Durability (DRB)</strong>, which decreased as the weapon was used and eventually broke at 0. This idea has been removed by the developers and is no longer part of the game.</p>
+                </div>
+            </div>
+        </div>
+
         <div class="cta-box">
             <h3>🔥 Ready to Craft Your Weapon?</h3>
             <p style="margin-bottom: 1.5rem;">Use our calculator to plan your ore combinations and create the perfect weapon!</p>
