--- a/feedback.html
+++ b/feedback.html
@@ -420,6 +420,14 @@
         </div>
     </div>
 
+    
+    <!-- Advertisement -->
+    <div style="background: #f5f5f5; border: 1px solid #ddd; border-radius: 8px; padding: 1rem; margin: 2rem auto; max-width: 1200px; text-align: center;">
+        <p style="font-size: 0.75rem; color: #999; margin-bottom: 0.5rem;">Advertisement</p>
+        <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
+        <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
+    </div>
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
