Add Ahrefs Analytics tracking to all 15 HTML pages

--- a/blog-introducing-calculator.html
+++ b/blog-introducing-calculator.html
@@ -137,6 +137,9 @@
             color: #ff9800;
         }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <header>
