--- a/enemies.html
+++ b/enemies.html
@@ -28,6 +28,9 @@
         footer { background: linear-gradient(135deg, rgba(26, 26, 26, 0.98) 0%, rgba(45, 24, 16, 0.98) 100%); color: rgba(255, 255, 255, 0.9); padding: 2rem 0; text-align: center; border-top: 1px solid rgba(255, 87, 34, 0.3); margin-top: 3rem; }
         footer a { color: #ff8a50; text-decoration: none; }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <header>
