--- a/index.html
+++ b/index.html
@@ -541,6 +541,9 @@
             }
         }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <!-- Header -->
