--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,9 @@
             margin-bottom: 1rem;
         }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <header>
