--- a/codes.html
+++ b/codes.html
@@ -297,6 +297,9 @@
             text-decoration: underline;
         }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <header>
