--- a/recipes.html
+++ b/recipes.html
@@ -324,6 +324,9 @@
             text-decoration: underline;
         }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <header>
