--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -92,6 +92,9 @@
             text-decoration: none;
         }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <header>
