--- a/weapons.html
+++ b/weapons.html
@@ -386,6 +386,9 @@
             text-decoration: underline;
         }
     </style>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
 </head>
 <body>
     <header>
