--- a/weapons.html
+++ b/weapons.html
@@ -397,9 +397,9 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
+                <a href="/armor.html">Armor</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/ore-guide.html">Ores</a>
-                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
@@ -430,124 +430,6 @@
             <p style="margin-bottom: 1rem;"><strong>Enhancements and runes</strong> can dramatically change how a weapon feels and performs.</p>
             
             <p><strong>Different weapon types</strong> (Daggers, Straight Swords, Katanas, Great Swords, Great Axes, Colossal Swords, Gauntlets) define your combat style.</p>
-        </div>
-
-        <div class="content-section">
-            <h2 style="color: #ff5722; margin-bottom: 1.5rem;">⚔️ All 8 Weapon Types</h2>
-            
-            <div class="weapon-grid">
-                <!-- Daggers -->
-                <div class="weapon-card starter">
-                    <div class="weapon-header">
-                        <div class="weapon-name">🗡️ Daggers</div>
-                        <span class="weapon-tier tier-starter">STARTER</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "A simple blade yet, incredibly reliable."
-                    </div>
-                    <div class="weapon-description">
-                        Fast, reliable weapons perfect for beginners. Daggers offer quick strikes and easy handling, making them ideal for learning combat mechanics in The Forge.
-                    </div>
-                </div>
-
-                <!-- Great Swords -->
-                <div class="weapon-card intermediate">
-                    <div class="weapon-header">
-                        <div class="weapon-name">⚔️ Great Swords</div>
-                        <span class="weapon-tier tier-intermediate">INTERMEDIATE</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "A Dagger can't satisfy you? This may help."
-                    </div>
-                    <div class="weapon-description">
-                        Larger and more powerful than daggers. Great Swords provide increased damage and reach for players ready to upgrade their arsenal and take on tougher challenges.
-                    </div>
-                </div>
-
-                <!-- Straight Swords -->
-                <div class="weapon-card intermediate">
-                    <div class="weapon-header">
-                        <div class="weapon-name">⚔️ Straight Swords</div>
-                        <span class="weapon-tier tier-intermediate">INTERMEDIATE</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "So you truly want a worthy sword, not a dull blade... try this."
-                    </div>
-                    <div class="weapon-description">
-                        Balanced weapons that assist with more dangerous enemies. Straight Swords offer a perfect mix of speed and power for versatile combat situations.
-                    </div>
-                </div>
-
-                <!-- Katanas -->
-                <div class="weapon-card advanced">
-                    <div class="weapon-header">
-                        <div class="weapon-name">🗡️ Katanas</div>
-                        <span class="weapon-tier tier-advanced">ADVANCED</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "A samurai's most trusty-worthy companion. Now in your hands."
-                    </div>
-                    <div class="weapon-description">
-                        Swift and elegant weapons favored by skilled warriors. Katanas combine speed with precision for devastating combos and require mastery to wield effectively.
-                    </div>
-                </div>
-
-                <!-- Great Hammers -->
-                <div class="weapon-card advanced">
-                    <div class="weapon-header">
-                        <div class="weapon-name">🔨 Great Hammers</div>
-                        <span class="weapon-tier tier-advanced">ADVANCED</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "An incredibly strong-headed weapon, meant for those with the strength to actually swing it."
-                    </div>
-                    <div class="weapon-description">
-                        Massive weapons requiring great strength. Great Hammers deliver crushing blows with unmatched raw power, perfect for players who favor brute force.
-                    </div>
-                </div>
-
-                <!-- Gauntlets -->
-                <div class="weapon-card advanced">
-                    <div class="weapon-header">
-                        <div class="weapon-name">👊 Gauntlets</div>
-                        <span class="weapon-tier tier-advanced">ADVANCED</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "Blades don't always prove your strength. Sometimes a little brute force does the trick."
-                    </div>
-                    <div class="weapon-description">
-                        Close-range combat weapons for brawlers. Gauntlets let you fight with pure brute force and rapid strikes, bringing the fight up close and personal.
-                    </div>
-                </div>
-
-                <!-- Great Axes -->
-                <div class="weapon-card advanced">
-                    <div class="weapon-header">
-                        <div class="weapon-name">🪓 Great Axes</div>
-                        <span class="weapon-tier tier-advanced">ADVANCED</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "Heavy, powerful, and devastating in the right hands."
-                    </div>
-                    <div class="weapon-description">
-                        Massive axes that combine reach and power. Great Axes deliver sweeping strikes with tremendous force, ideal for players who want to dominate the battlefield with raw strength.
-                    </div>
-                </div>
-
-                <!-- Colossal Swords -->
-                <div class="weapon-card legendary">
-                    <div class="weapon-header">
-                        <div class="weapon-name">⚔️ Colossal Swords</div>
-                        <span class="weapon-tier tier-legendary">LEGENDARY</span>
-                    </div>
-                    <div class="weapon-quote">
-                        "A powerful force, disguised as a rather large blade."
-                    </div>
-                    <div class="weapon-description">
-                        The ultimate weapons for those who have beaten luck itself. Only gifted to those who have scouted for the rarest of Ores. Colossal Swords represent the pinnacle of forging mastery and combat prowess.
-                    </div>
-                </div>
-            </div>
         </div>
 
         <!-- Upgrades Section -->
