Add new advertisement code to all main pages

--- a/blog.html
+++ b/blog.html
@@ -242,6 +242,8 @@
         <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
         <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
     </div>
+    <!-- Advertisement -->
+    <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
 
 </body>
 </html>
