--- a/index.html
+++ b/index.html
@@ -701,6 +701,8 @@
         </div>
     </footer>
 
+    <!-- Advertisement -->
+    <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
 
 </body>
 </html>
