--- a/ore-guide.html
+++ b/ore-guide.html
@@ -983,6 +983,8 @@
             <p>&copy; 2024 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
             <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/ore-guide.html">Ore Guide</a> | <a href="/blog.html">Blog</a> | <a href="/privacy-policy.html">Privacy</a> | <a href="/terms-of-service.html">Terms</a></p>
         </div>
-    </footer>
+    </footer>    <!-- Advertisement -->
+    <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
+
 </body>
 </html>
