--- a/wiki.html
+++ b/wiki.html
@@ -883,6 +883,8 @@
                 }
             }
         });
-    </script>
+    </script>    <!-- Advertisement -->
+    <script type="text/javascript" src="//pl28203408.effectivegatecpm.com/33/6d/20/336d201ce818c2f17706b3912bfe9895.js"></script>
+
 </body>
 </html>
