Add Quick Tips section and ToolPilot badge

--- a/index.html
+++ b/index.html
@@ -591,6 +591,37 @@
         </div>
     </section>
 
+    <!-- Quick Tips Section -->
+    <section style="background: linear-gradient(135deg, #1a1a1a 0%, #2d1810 100%); padding: 4rem 0;">
+        <div class="container">
+            <h2 style="color: #ff9800; font-size: 2.5rem; margin-bottom: 2.5rem; text-align: center; font-weight: 800; text-shadow: 0 2px 15px rgba(255, 152, 0, 0.4);">💡 Quick Tips for Beginners</h2>
+            
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem; max-width: 1000px; margin: 0 auto;">
+                <!-- Tip 1: Luck Stat & Race Rerolls -->
+                <div style="background: linear-gradient(135deg, rgba(45, 45, 45, 0.95) 0%, rgba(26, 26, 26, 0.95) 100%); border-radius: 16px; padding: 2.5rem; border: 2px solid #2196f3; box-shadow: 0 8px 30px rgba(33, 150, 243, 0.2); transition: transform 0.3s ease;">
+                    <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
+                        <div style="background: linear-gradient(135deg, #2196f3 0%, #1976d2 100%); width: 56px; height: 56px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.75rem; flex-shrink: 0; box-shadow: 0 4px 15px rgba(33, 150, 243, 0.4);">❓</div>
+                        <h3 style="color: #64b5f6; font-size: 1.4rem; font-weight: 700; margin: 0; line-height: 1.3;">Luck Stat & Race Rerolls</h3>
+                    </div>
+                    <p style="color: rgba(255, 255, 255, 0.9); line-height: 1.8; font-size: 1.05rem; margin: 0;">
+                        The <strong style="color: #ffeb3b;">Luck</strong> stat does <strong style="color: #f44336;">NOT</strong> affect your race reroll chances. It only impacts mining drops and loot.
+                    </p>
+                </div>
+
+                <!-- Tip 2: Save Your Runes -->
+                <div style="background: linear-gradient(135deg, rgba(45, 45, 45, 0.95) 0%, rgba(26, 26, 26, 0.95) 100%); border-radius: 16px; padding: 2.5rem; border: 2px solid #ff9800; box-shadow: 0 8px 30px rgba(255, 152, 0, 0.2); transition: transform 0.3s ease;">
+                    <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
+                        <div style="background: linear-gradient(135deg, #ff9800 0%, #f57c00 100%); width: 56px; height: 56px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.75rem; flex-shrink: 0; box-shadow: 0 4px 15px rgba(255, 152, 0, 0.4);">❓</div>
+                        <h3 style="color: #ffb74d; font-size: 1.4rem; font-weight: 700; margin: 0; line-height: 1.3;">Save Your Runes</h3>
+                    </div>
+                    <p style="color: rgba(255, 255, 255, 0.9); line-height: 1.8; font-size: 1.05rem; margin: 0;">
+                        Don't apply runes until you get the <strong style="color: #9c27b0;">Arcane Pickaxe</strong>. Lower-tier pickaxes will be replaced quickly.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
@@ -695,6 +726,9 @@
         <p style="font-size: 0.75rem; color: #999; margin-bottom: 0.5rem;">Advertisement</p>
         <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
         <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
+        <div style="margin-top: 1rem;">
+            <a href="https://www.effectivegatecpm.com/w4iddd0ia?key=ad215e0cdbb3dd1fcade6182fd203a19" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 0.75rem 1.5rem; background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: transform 0.2s; box-shadow: 0 4px 15px rgba(255, 87, 34, 0.3);">Special Offer - Click Here</a>
+        </div>
     </div>
 
     <footer>
@@ -706,6 +740,7 @@
             <p>
                 <a target="_blank" href="https://goodaitools.com"><img src="https://goodaitools.com/assets/images/badge.png" alt="Good AI Tools" height="54"></a>
                 <a href="https://www.showmebest.ai" target="_blank"><img src="https://www.showmebest.ai/badge/feature-badge-white.webp" alt="Featured on ShowMeBestAI" width="220" height="60"></a>
+                <a href="https://toolpilot.ai" target="_blank" rel="noopener noreferrer"><img src="https://www.toolpilot.ai/cdn/shop/files/f-w_690x151_crop_center.png" alt="Powered by ToolPilot.ai" height="60"></a>
             </p>
         </div>
     </footer>
