--- a/npcs.html
+++ b/npcs.html
@@ -182,6 +182,9 @@
         <p style="font-size: 0.75rem; color: #999; margin-bottom: 0.5rem;">Advertisement</p>
         <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
         <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
+        <div style="margin-top: 1rem;">
+            <a href="https://www.effectivegatecpm.com/w4iddd0ia?key=ad215e0cdbb3dd1fcade6182fd203a19" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 0.75rem 1.5rem; background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: transform 0.2s;">Special Offer - Click Here</a>
+        </div>
     </div>
 
     <footer>
