--- a/ore-guide.html
+++ b/ore-guide.html
@@ -348,6 +348,35 @@
             </p>
         </div>
 
+        <!-- Quick Tips Section -->
+        <div style="background: linear-gradient(135deg, #2d1810 0%, #1a1a1a 100%); border-radius: 15px; padding: 2.5rem; margin-bottom: 2rem; box-shadow: 0 10px 40px rgba(255, 87, 34, 0.3); border: 2px solid #ff5722;">
+            <h3 style="color: #ff9800; font-size: 1.8rem; margin-bottom: 2rem; text-align: center; font-weight: 700; text-shadow: 0 2px 10px rgba(255, 152, 0, 0.3);">💡 QUICK TIPS</h3>
+            
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <!-- Tip 1: Luck Stat & Race Rerolls -->
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 2rem; border-left: 4px solid #2196f3; backdrop-filter: blur(10px);">
+                    <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem;">
+                        <div style="background: #2196f3; width: 48px; height: 48px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; flex-shrink: 0;">❓</div>
+                        <h4 style="color: #64b5f6; font-size: 1.25rem; font-weight: 700; margin: 0;">Luck Stat & Race Rerolls</h4>
+                    </div>
+                    <p style="color: rgba(255, 255, 255, 0.85); line-height: 1.7; font-size: 1rem; margin: 0;">
+                        The <strong style="color: #ffeb3b;">Luck</strong> stat does <strong style="color: #f44336;">NOT</strong> affect your race reroll chances. It only impacts mining drops and loot.
+                    </p>
+                </div>
+
+                <!-- Tip 2: Save Your Runes -->
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 2rem; border-left: 4px solid #ff9800; backdrop-filter: blur(10px);">
+                    <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem;">
+                        <div style="background: #ff9800; width: 48px; height: 48px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; flex-shrink: 0;">❓</div>
+                        <h4 style="color: #ffb74d; font-size: 1.25rem; font-weight: 700; margin: 0;">Save Your Runes</h4>
+                    </div>
+                    <p style="color: rgba(255, 255, 255, 0.85); line-height: 1.7; font-size: 1rem; margin: 0;">
+                        Don't apply runes until you get the <strong style="color: #9c27b0;">Arcane Pickaxe</strong>. Lower-tier pickaxes will be replaced quickly.
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <!-- Introduction -->
         <div class="content-section">
             <h3>What Are Ores in The Forge?</h3>
@@ -985,6 +1014,9 @@
         <p style="font-size: 0.75rem; color: #999; margin-bottom: 0.5rem;">Advertisement</p>
         <script async="async" data-cfasync="false" src="//pl28199006.effectivegatecpm.com/79ca9dd9143ba2de7e3df6c789a12d4c/invoke.js"></script>
         <div id="container-79ca9dd9143ba2de7e3df6c789a12d4c"></div>
+        <div style="margin-top: 1rem;">
+            <a href="https://www.effectivegatecpm.com/w4iddd0ia?key=ad215e0cdbb3dd1fcade6182fd203a19" target="_blank" rel="noopener noreferrer" style="display: inline-block; padding: 0.75rem 1.5rem; background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: transform 0.2s;">Special Offer - Click Here</a>
+        </div>
     </div>
 
     <footer>
