Add comprehensive game guides: Quick Tips, Pickaxe Progression, Money Making, Gamepasses, Quest Priority, Runes Guide, Best Races, and update llms-full.txt

--- a/ore-guide.html
+++ b/ore-guide.html
@@ -377,6 +377,19 @@
             </div>
         </div>
 
+        <!-- Pickaxe Upgrade Reminder -->
+        <div style="background: linear-gradient(135deg, #9c27b0 0%, #7b1fa2 100%); border-radius: 15px; padding: 2rem; margin-bottom: 2rem; box-shadow: 0 10px 40px rgba(156, 39, 176, 0.4); border: 2px solid #ce93d8;">
+            <h3 style="color: #fff; font-size: 1.5rem; margin-bottom: 1rem; text-align: center; font-weight: 700; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+                <span>⛏️</span> Upgrade Your Pickaxe for Better Mining
+            </h3>
+            <p style="color: rgba(255, 255, 255, 0.9); text-align: center; line-height: 1.7; margin-bottom: 1.5rem;">
+                Better pickaxes mine faster and help you gather rare ores more efficiently. Follow the upgrade path: <strong>Iron → Stonewake's → Cobalt → Titanium → Mythril → Arcane Pickaxe</strong>
+            </p>
+            <div style="text-align: center;">
+                <a href="/wiki.html#pickaxe-progression" style="display: inline-block; background: #fff; color: #9c27b0; padding: 0.75rem 2rem; border-radius: 8px; text-decoration: none; font-weight: 700; transition: transform 0.3s; box-shadow: 0 4px 15px rgba(255, 255, 255, 0.3);">View Full Pickaxe Guide</a>
+            </div>
+        </div>
+
         <!-- Introduction -->
         <div class="content-section">
             <h3>What Are Ores in The Forge?</h3>
