--- a/recipes.html
+++ b/recipes.html
@@ -434,94 +434,45 @@
         </div>
 
         <!-- Weapons Information Section -->
+        <!-- Money Making with Crafting -->
         <div class="content-section" style="background: #fff; border-radius: 20px; padding: 2.5rem; margin-bottom: 2rem;">
-            <h2>⚔️ Weapon Types in The Forge</h2>
-            <p style="margin-bottom: 2rem;">The Forge features 7 distinct weapon types, each with unique characteristics and playstyles. Choose your weapon based on your combat preferences and build strategy.</p>
+            <h2>💰 Profitable Crafting Strategy</h2>
+            <p style="margin-bottom: 2rem;">One of the best ways to earn gold in The Forge is through strategic crafting and selling. Here's the most profitable method:</p>
             
-            <div class="recipe-grid">
-                <!-- Daggers -->
-                <div class="recipe-card rare" data-type="weapon">
-                    <div class="recipe-header">
-                        <div class="recipe-name">🗡️ Daggers</div>
-                        <span class="recipe-tier tier-beginner">STARTER</span>
-                    </div>
-                    <div style="padding: 1rem 0;">
-                        <p style="color: #666; font-style: italic; margin-bottom: 1rem;">"A simple blade yet, incredibly reliable."</p>
-                        <p style="color: #555;">Fast, reliable weapons perfect for beginners. Daggers offer quick strikes and easy handling, making them ideal for learning combat mechanics.</p>
+            <div style="background: linear-gradient(135deg, #2196f3 0%, #1976d2 100%); border-radius: 16px; padding: 2.5rem; color: #fff; box-shadow: 0 8px 30px rgba(33, 150, 243, 0.3);">
+                <div style="display: flex; align-items: flex-start; gap: 2rem; margin-bottom: 2rem;">
+                    <div style="background: rgba(255, 255, 255, 0.2); width: 64px; height: 64px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2rem; font-weight: 800; flex-shrink: 0; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);">2</div>
+                    <div style="flex: 1;">
+                        <h3 style="color: #fff; font-size: 1.75rem; margin-bottom: 1rem; font-weight: 700;">Forge & Sell Heavy Armor or Colossal Swords</h3>
+                        <p style="color: rgba(255, 255, 255, 0.95); line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">
+                            Craft <strong>Heavy Armor</strong> or <strong>Colossal Swords</strong> and sell them. These high-tier items fetch the <strong>best prices</strong> and are ideal for converting ores into gold.
+                        </p>
                     </div>
                 </div>
 
-                <!-- Great Swords -->
-                <div class="recipe-card epic" data-type="weapon">
-                    <div class="recipe-header">
-                        <div class="recipe-name">⚔️ Great Swords</div>
-                        <span class="recipe-tier tier-intermediate">INTERMEDIATE</span>
-                    </div>
-                    <div style="padding: 1rem 0;">
-                        <p style="color: #666; font-style: italic; margin-bottom: 1rem;">"A Dagger can't satisfy you? This may help."</p>
-                        <p style="color: #555;">Larger and more powerful than daggers. Great Swords provide increased damage and reach for players ready to upgrade their arsenal.</p>
-                    </div>
+                <div style="background: rgba(255, 255, 255, 0.15); border-radius: 12px; padding: 2rem; backdrop-filter: blur(10px);">
+                    <h4 style="color: #fff; font-size: 1.3rem; margin-bottom: 1.5rem; font-weight: 700; display: flex; align-items: center; gap: 0.5rem;">
+                        <span>💡</span> Why This Works
+                    </h4>
+                    <ul style="color: rgba(255, 255, 255, 0.95); line-height: 1.9; margin-left: 1.5rem; font-size: 1.05rem;">
+                        <li style="margin-bottom: 1rem;"><strong>High Sell Value:</strong> Heavy Armor and Colossal Swords sell for significantly more gold than other equipment types</li>
+                        <li style="margin-bottom: 1rem;"><strong>Ore Efficiency:</strong> Convert your mined ores into maximum profit by crafting these high-tier items</li>
+                        <li style="margin-bottom: 1rem;"><strong>Consistent Income:</strong> Reliable method for generating gold whenever you have excess ores</li>
+                        <li><strong>Market Demand:</strong> These items are always in demand, making them easy to sell to NPCs</li>
+                    </ul>
                 </div>
 
-                <!-- Straight Swords -->
-                <div class="recipe-card epic" data-type="weapon">
-                    <div class="recipe-header">
-                        <div class="recipe-name">⚔️ Straight Swords</div>
-                        <span class="recipe-tier tier-intermediate">INTERMEDIATE</span>
-                    </div>
-                    <div style="padding: 1rem 0;">
-                        <p style="color: #666; font-style: italic; margin-bottom: 1rem;">"So you truly want a worthy sword, not a dull blade... try this."</p>
-                        <p style="color: #555;">Balanced weapons that assist with more dangerous enemies. Straight Swords offer a perfect mix of speed and power.</p>
-                    </div>
+                <div style="margin-top: 2rem; padding: 1.5rem; background: rgba(255, 235, 59, 0.2); border-radius: 12px; border-left: 4px solid #ffeb3b;">
+                    <p style="color: #fff; font-size: 1rem; margin: 0; line-height: 1.7;">
+                        <strong style="color: #ffeb3b;">Pro Tip:</strong> Use common ores for crafting items to sell - save your rare ores for your own equipment. This maximizes profit while preserving valuable resources for personal upgrades.
+                    </p>
                 </div>
+            </div>
 
-                <!-- Katanas -->
-                <div class="recipe-card epic" data-type="weapon">
-                    <div class="recipe-header">
-                        <div class="recipe-name">🗡️ Katanas</div>
-                        <span class="recipe-tier tier-advanced">ADVANCED</span>
-                    </div>
-                    <div style="padding: 1rem 0;">
-                        <p style="color: #666; font-style: italic; margin-bottom: 1rem;">"A samurai's most trusty-worthy companion. Now in your hands."</p>
-                        <p style="color: #555;">Swift and elegant weapons favored by skilled warriors. Katanas combine speed with precision for devastating combos.</p>
-                    </div>
-                </div>
-
-                <!-- Great Hammers -->
-                <div class="recipe-card epic" data-type="weapon">
-                    <div class="recipe-header">
-                        <div class="recipe-name">🔨 Great Hammers</div>
-                        <span class="recipe-tier tier-advanced">ADVANCED</span>
-                    </div>
-                    <div style="padding: 1rem 0;">
-                        <p style="color: #666; font-style: italic; margin-bottom: 1rem;">"An incredibly strong-headed weapon, meant for those with the strength to actually swing it."</p>
-                        <p style="color: #555;">Massive weapons requiring great strength. Great Hammers deliver crushing blows with unmatched raw power.</p>
-                    </div>
-                </div>
-
-                <!-- Gauntlets -->
-                <div class="recipe-card epic" data-type="weapon">
-                    <div class="recipe-header">
-                        <div class="recipe-name">👊 Gauntlets</div>
-                        <span class="recipe-tier tier-advanced">ADVANCED</span>
-                    </div>
-                    <div style="padding: 1rem 0;">
-                        <p style="color: #666; font-style: italic; margin-bottom: 1rem;">"Blades don't always prove your strength. Sometimes a little brute force does the trick."</p>
-                        <p style="color: #555;">Close-range combat weapons for brawlers. Gauntlets let you fight with pure brute force and rapid strikes.</p>
-                    </div>
-                </div>
-
-                <!-- Colossal Swords -->
-                <div class="recipe-card legendary" data-type="weapon">
-                    <div class="recipe-header">
-                        <div class="recipe-name">⚔️ Colossal Swords</div>
-                        <span class="recipe-tier tier-legendary">LEGENDARY</span>
-                    </div>
-                    <div style="padding: 1rem 0;">
-                        <p style="color: #666; font-style: italic; margin-bottom: 1rem;">"A powerful force, disguised as a rather large blade."</p>
-                        <p style="color: #555;">The ultimate weapons for those who have beaten luck itself. Only gifted to those who have scouted for the rarest of Ores. Colossal Swords represent the pinnacle of forging mastery.</p>
-                    </div>
-                </div>
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="/" style="display: inline-block; background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); color: white; padding: 1rem 2.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; font-size: 1.125rem; box-shadow: 0 4px 15px rgba(255, 87, 34, 0.4); transition: all 0.3s;">
+                    🔥 Use Calculator to Plan Your Crafts →
+                </a>
             </div>
         </div>
 
