Update recipes page: rename to 'The Forge Weapon Recipes', update ore combinations format, add Quick Craft tips, move Recipes to first nav position, update sitemap

--- a/recipes.html
+++ b/recipes.html
@@ -342,6 +342,7 @@
         <div class="container">
             <h1>📖 The Forge Recipes</h1>
             <nav>
+                <a href="/recipes.html">Recipes</a>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
@@ -360,7 +361,7 @@
 
         <!-- Weapon Crafting Guide Table -->
         <div class="content-section" style="background: #fff; border-radius: 20px; padding: 2.5rem; margin-bottom: 2rem;">
-            <h2>⚔️ Weapon Crafting Guide</h2>
+            <h2>⚔️ The Forge Weapon Recipes</h2>
             <p style="margin-bottom: 2rem;">Optimal ore combinations and success rates for each weapon type.</p>
             
             <div style="overflow-x: auto;">
@@ -379,49 +380,49 @@
                             <td style="padding: 1rem; font-weight: 600; color: #ff5722;">🗡️ Dagger</td>
                             <td style="padding: 1rem;">3</td>
                             <td style="padding: 1rem; font-weight: 600;">3</td>
-                            <td style="padding: 1rem;">3x 0.2-0.5x Ores<br><span style="color: #666; font-size: 0.9rem;">(Stone, Sand Stone, Copper)</span></td>
+                            <td style="padding: 1rem;">3 * 0.2-0.5x Ores<br><span style="color: #666; font-size: 0.9rem;">(Stone, Sand Stone, Copper)</span></td>
                             <td style="padding: 1rem; color: #4caf50; font-weight: 600;">100%</td>
                         </tr>
                         <tr style="border-bottom: 1px solid #e0e0e0;">
                             <td style="padding: 1rem; font-weight: 600; color: #ff5722;">⚔️ Straight Sword</td>
                             <td style="padding: 1rem;">5</td>
                             <td style="padding: 1rem; font-weight: 600;">5-6</td>
-                            <td style="padding: 1rem;">3x 0.6-1.0x + 2x 1.1-1.7x Ores</td>
+                            <td style="padding: 1rem;">3 * 0.6-1.0x + 2 * 1.1-1.7x Ores</td>
                             <td style="padding: 1rem; color: #4caf50;">65% (5 Ores)<br><span style="color: #2196f3;">86% (6 Ores)</span></td>
                         </tr>
                         <tr style="border-bottom: 1px solid #e0e0e0;">
                             <td style="padding: 1rem; font-weight: 600; color: #ff5722;">👊 Gauntlet</td>
                             <td style="padding: 1rem;">7</td>
                             <td style="padding: 1rem; font-weight: 600;">8-9</td>
-                            <td style="padding: 1rem;">2-3x 1.1-1.7x + 5-7x 1.8-3.3x Ores</td>
+                            <td style="padding: 1rem;">2-3 * 1.1-1.7x + 5-7 * 1.8-3.3x Ores</td>
                             <td style="padding: 1rem; color: #ff9800;">54% (8 Ores)<br><span style="color: #4caf50;">65% (9 Ores)</span></td>
                         </tr>
                         <tr style="border-bottom: 1px solid #e0e0e0;">
                             <td style="padding: 1rem; font-weight: 600; color: #ff5722;">🗡️ Katana</td>
                             <td style="padding: 1rem;">9</td>
                             <td style="padding: 1rem; font-weight: 600;">11-12</td>
-                            <td style="padding: 1rem;">1-2x 3.4-5.5x + 9-11x 1.8-3.3x Ores</td>
+                            <td style="padding: 1rem;">1-2 * 3.4-5.5x + 9-11 * 1.8-3.3x Ores</td>
                             <td style="padding: 1rem; color: #ff9800;">63% (11 Ores)<br><span style="color: #4caf50;">72% (12 Ores)</span></td>
                         </tr>
                         <tr style="border-bottom: 1px solid #e0e0e0;">
                             <td style="padding: 1rem; font-weight: 600; color: #ff5722;">⚔️ Great Sword</td>
                             <td style="padding: 1rem;">13</td>
                             <td style="padding: 1rem; font-weight: 600;">14-16</td>
-                            <td style="padding: 1rem;">3-5x 3.4-5.5x + 10-13x 1.8-3.3x Ores</td>
+                            <td style="padding: 1rem;">3-5 * 3.4-5.5x + 10-13 * 1.8-3.3x Ores</td>
                             <td style="padding: 1rem; color: #f44336;">45% (14 Ores)<br><span style="color: #ff9800;">70% (16 Ores)</span></td>
                         </tr>
                         <tr style="border-bottom: 1px solid #e0e0e0;">
                             <td style="padding: 1rem; font-weight: 600; color: #ff5722;">🪓 Great Axe</td>
                             <td style="padding: 1rem;">16</td>
                             <td style="padding: 1rem; font-weight: 600;">17</td>
-                            <td style="padding: 1rem;">5-7x 6.0x+ + 10-12x 3.4-5.5x Ores</td>
+                            <td style="padding: 1rem;">5-7 * 6.0x+ + 10-12 * 3.4-5.5x Ores</td>
                             <td style="padding: 1rem; color: #f44336; font-weight: 600;">11% (17 Ores)</td>
                         </tr>
                         <tr>
                             <td style="padding: 1rem; font-weight: 600; color: #9c27b0;">⚔️ Colossal Sword</td>
                             <td style="padding: 1rem;">18</td>
                             <td style="padding: 1rem; font-weight: 600; color: #9c27b0;">18+</td>
-                            <td style="padding: 1rem;">8-10x 6.0x+ + 8-12x 3.4-5.5x Ores</td>
+                            <td style="padding: 1rem;">8-10 * 6.0x+ + 8-12 * 3.4-5.5x Ores</td>
                             <td style="padding: 1rem; color: #f44336; font-weight: 700;">&lt;1%</td>
                         </tr>
                     </tbody>
