--- a/npcs.html
+++ b/npcs.html
@@ -46,6 +46,7 @@
         <div class="container">
             <h1>🧙 The Forge NPCs</h1>
             <nav>
+                <a href="/recipes.html">Recipes</a>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
