--- a/races.html
+++ b/races.html
@@ -52,6 +52,7 @@
         <div class="container">
             <h1>👤 The Forge Races</h1>
             <nav>
+                <a href="/recipes.html">Recipes</a>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/weapons.html">Weapons</a>
