--- a/weapons.html
+++ b/weapons.html
@@ -404,6 +404,7 @@
         <div class="container">
             <h1>⚔️ The Forge Weapons</h1>
             <nav>
+                <a href="/recipes.html">Recipes</a>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/armor.html">Armor</a>
