Update codes: expire PEAK and 400K, add new FREESPINS code with 8x Rerolls and 1 Luck Totem

--- a/codes.html
+++ b/codes.html
@@ -335,7 +335,7 @@
         </div>
 
         <div class="update-info">
-            <strong>📅 Last Updated:</strong> December 6, 2024 | <strong>⚡ Status:</strong> All The Forge codes December 2025 verified and working!
+            <strong>📅 Last Updated:</strong> December 9, 2025 | <strong>⚡ Status:</strong> All The Forge codes December 2025 verified and working!
         </div>
 
         <!-- Active Codes Section -->
@@ -344,21 +344,12 @@
             
             <div class="code-card" style="border-left: 4px solid #4caf50;">
                 <div class="code-info">
-                    <div class="code-name">400K!</div>
-                    <div class="code-reward">🎁 Reward: 8x Rerolls</div>
+                    <div class="code-name">FREESPINS</div>
+                    <div class="code-reward">🎁 Reward: 8x Rerolls, 1 Luck Totem</div>
                     <span class="code-status status-active">✓ ACTIVE</span>
                     <span style="background: #ff9800; color: #fff; padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.75rem; margin-left: 0.5rem; font-weight: bold;">NEW!</span>
                 </div>
-                <button class="copy-btn" onclick="copyCode('400K!', event)">Copy Code</button>
-            </div>
-
-            <div class="code-card" style="border-left: 4px solid #4caf50;">
-                <div class="code-info">
-                    <div class="code-name">PEAK!</div>
-                    <div class="code-reward">🎁 Reward: 10x Rerolls</div>
-                    <span class="code-status status-active">✓ ACTIVE</span>
-                </div>
-                <button class="copy-btn" onclick="copyCode('PEAK!', event)">Copy Code</button>
+                <button class="copy-btn" onclick="copyCode('FREESPINS', event)">Copy Code</button>
             </div>
 
             <p style="margin-top: 1.5rem; color: #666; font-style: italic;">
@@ -378,8 +369,7 @@
                         <label style="display: block; margin-bottom: 0.5rem; font-weight: bold; color: #333;">Which code did you try?</label>
                         <select id="codeSelect" required style="width: 100%; padding: 0.8rem; border: 2px solid #ff5722; border-radius: 8px; font-size: 1rem;">
                             <option value="">Select a code...</option>
-                            <option value="400K!">400K! (NEW)</option>
-                            <option value="PEAK!">PEAK!</option>
+                            <option value="FREESPINS">FREESPINS (NEW)</option>
                         </select>
                     </div>
                     <div style="margin-bottom: 1rem;">
@@ -442,6 +432,22 @@
                 ℹ️ These Forge codes December 2025 have expired and can no longer be redeemed. Keep this page bookmarked for new The Forge codes December 2025!
             </p>
             
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">400K!</div>
+                    <div class="code-reward">🎁 Reward: 8x Rerolls</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">PEAK!</div>
+                    <div class="code-reward">🎁 Reward: 10x Rerolls</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
             <div class="code-card" style="opacity: 0.6;">
                 <div class="code-info">
                     <div class="code-name">SORRYFORSHUTDOWN</div>
